--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-coder",
   "version": "1.0.0",
-  "description": "a react code editor",
+  "description": "a code editor component for react",
   "author": "AM-77",
   "license": "MIT",
   "repository": "AM-77/react-coder",
@@ -56,6 +56,7 @@
     "dist"
   ],
   "dependencies": {
+    "babel-plugin-prismjs": "^2.0.1",
     "copy-to-clipboard": "^3.3.1",
     "prismjs": "^1.20.0"
   }
